20250420 지도 그래프가 보이지 않는 것을 개선

--- a/학업중단지역.ipynb
+++ b/학업중단지역.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNblx5sXlb7iWKwKfBKzSz1",
+      "authorship_tag": "ABX9TyPpXwBz2Gb+ZVeKGe/Cfo9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -463,6 +463,30 @@
         "\n",
         "# 지도 시각화 결과 확인을 위해 HTML 파일을 출력\n",
         "m"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!jupyter trust your_notebook.ipynb"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ETIO9YqSmYJ7",
+        "outputId": "0b83fddb-c6d6-429b-bf51-5fe1d0b2281c"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[TrustNotebookApp] ERROR | Notebook missing: your_notebook.ipynb\n",
+            "[TrustNotebookApp] Exiting application: jupyter\n"
+          ]
+        }
       ]
     }
   ]
